# textractor

./: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: download-grammars.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
src/components/: ChangelogView.tsx  CodeProcessingSelector.tsx  ExportModal.tsx  FileCard.tsx  GitFileSelector.tsx  GlobalImportIndicator.tsx  HomeView.tsx  LanguageDistributionChart.tsx  LoadingSkeleton.tsx  MenuBar.tsx  OutputStyleSelector.tsx  ProcessingStatus.tsx  PromptTemplateSelector.tsx  ReportIssueView.tsx  SecurityWarningModal.tsx  SettingsView.tsx  SortableItem.tsx  StatChip.tsx  StatsView.tsx  TabBar.tsx  TreeItem.tsx  VirtualizedCodeViewer.tsx  VirtualizedFileList.tsx
src/constants/: index.ts  languages.ts  templates.ts
src/examples/: migration-example.tsx
src/hooks/: useFileContent.ts  useFileSystem.ts  useHistory.ts  useSearch.ts  useSession.ts  useSessionManager.ts  useSettings.ts  useTauriProcessingEvents.ts  useTheme.tsx
src/lib/: code-processing-worker.ts  code-processing.ts  codeProcessor.ts  db.ts  dropzone-utils.ts  file-processing.ts  file-tree.ts  format.ts  git-import-worker.ts  git-service.ts  icon-mapping.tsx  icons.ts  icons.tsx  security.ts  storage.ts  tokenWorker.ts
src/store/: createStore.ts  index.ts  types.ts  (+1 more)
(+39 files in other folders)
